<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/bt_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_finger" />

    <Button
        android:id="@+id/bt_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_pin" />

    <Button
        android:id="@+id/bt_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_back" />

    <Button
        android:id="@+id/bt_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_password" />

    <Button
        android:id="@+id/bt_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_pattern" />
</LinearLayout>